--- a/_website.yml
+++ b/_website.yml
@@ -5,7 +5,7 @@ website:
     palette: dark
  #   policy-url: www.hertiecodingclub.com
  #   prefs-text: "text"
-  google-analytics: "G-BBVB5SXEBW"
+  google-analytics: "G-39XDHM1GWG"
   title: ""
   site-url: https://sharetheresearch.netlify.app/
   #favicon: images/hcc.png
